experimentos/experimento_s30_disponib/k8s/microservicio-calculo-ruta-entrega-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: microservicio-calculo-ruta-entrega-container
  name: microservicio-calculo-ruta-entrega-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: microservicio-calculo-ruta-entrega-container
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: microservicio-calculo-ruta-entrega-container
    spec:
      containers:
        - image: us-central1-docker.pkg.dev/appnomonoliticas-452202/repositorio-imagenes-docker/microservicio_calculo_ruta_entrega:latest
          name: microservicio-calculo-ruta-entrega
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
