experimentos/experimento_s30_disponib/k8s/pulsar-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pulsar-container
  name: pulsar-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pulsar-container
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: pulsar-container
    spec:
      containers:
        - args:
            - bin/pulsar
            - standalone
          image: apachepulsar/pulsar:latest
          livenessProbe:
            exec:
              command:
                - curl -f http://localhost:8080/admin/v2/brokers/health || exit 1
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: pulsar-container
          ports:
            - containerPort: 6650
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
