experimentos/experimento_s30_disponib/k8s/rutas-db-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: rutas-db-container
  name: rutas-db-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rutas-db-container
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: rutas-db-container
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: rutas-db
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: admin
          image: postgres:15
          livenessProbe:
            exec:
              command:
                - pg_isready -U admin
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: rutas-db-container
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
