experimentos/experimento_s30_disponib/k8s/microservicio_calculo_ruta_entrega_container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: microservicio-calculo-ruta-entrega-container
  name: microservicio-calculo-ruta-entrega-container
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: microservicio-calculo-ruta-entrega-container
