experimentos/experimento_s30_disponib/k8s/pulsar-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pulsar-container
  name: pulsar-container
spec:
  ports:
    - name: "6650"
      port: 6650
      targetPort: 6650
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: pulsar-container
